<resources>
    <!--<string name="app_name">weather</string>-->
    <!--<string name="see_weather">看天氣</string>-->
    <!--<string name="go_home">返屋企</string>-->
    <!--<string name="search_dictionary">查詞典</string>-->
    <!--<string name="home_address">Pak Long Tsuen, Lung Kwu Tan, Tuen Mun, Hong Kong</string>-->
    <!--<string name="latitude">22.391</string>-->
    <!--<string name="longtitude">113.921</string>-->
    <!--&lt;!&ndash;<string name="home_address">park 20, San Mateo, CA</string>&ndash;&gt;-->
    <!--&lt;!&ndash;<string name="latitude">37.56</string>&ndash;&gt;-->
    <!--&lt;!&ndash;<string name="longtitude">-122.32</string>&ndash;&gt;-->
    <!--<string name="key">2da547474278edef7297721e5b4cafb7</string>-->
    <!--<string name="dictionary_key">	4d29404d564113657b816b0f3c08536d</string>-->
    <!--<string name="app_id">dcaa7e64</string>-->
    <!--&lt;!&ndash;weather info&ndash;&gt;-->
    <!--<string name="apparent_temp">體感溫度</string>-->
    <!--<string name="humidity">濕度</string>-->
    <!--<string name="windspeed">風速</string>-->
    <!--<string name="windbearing">風向</string>-->
    <!--<string name="precip_probablity">降水概率</string>-->
    <!--<string name="North">北</string>-->
    <!--<string name="East">東</string>-->
    <!--<string name="South">南</string>-->
    <!--<string name="West">西</string>-->
    <!--&lt;!&ndash; notification &ndash;&gt;-->
    <!--<string name="notification_title">天氣提醒</string>-->
    <!--<string name="notification_content">明天下雨帶傘啊</string>-->
    <!--&lt;!&ndash;dictionary&ndash;&gt;-->
    <!--<string name="editText_hint">請輸入英文單詞</string>-->
    <!--<string name="word_search">搜索</string>-->

    <string name="app_name">weather</string>
    <string name="see_weather">看天氣</string>
    <string name="go_home">返屋企</string>
    <string name="search_dictionary">查詞典</string>
    <string name="home_address">Pak Long Tsuen, Lung Kwu Tan, Tuen Mun, Hong Kong</string>
    <string name="latitude">22.391</string>
    <string name="longtitude">113.921</string>
    <!--<string name="home_address">park 20, San Mateo, CA</string>-->
    <!--<string name="latitude">37.56</string>-->
    <!--<string name="longtitude">-122.32</string>-->
    <string name="key">2da547474278edef7297721e5b4cafb7</string>
    <string name="dictionary_key">	4d29404d564113657b816b0f3c08536d</string>
    <string name="app_id">dcaa7e64</string>
    <!--weather info-->
    <string name="apparent_temp">體感溫度</string>
    <string name="humidity">濕度</string>
    <string name="windspeed">風速</string>
    <string name="windbearing">風向</string>
    <string name="precip_probablity">降水概率</string>
    <string name="North">北</string>
    <string name="East">東</string>
    <string name="South">南</string>
    <string name="West">西</string>
    <!-- notification -->
    <string name="notification_title">天氣提醒</string>
    <string name="notification_content1">楠楠今天下雨記得帶傘啊！</string>
    <string name="notification_content2">遮遮遮:)</string>
    <string name="notification_content3">楠楠，落雨啦！</string>
    <string name="notification_heavy1">今天雨好大好大啊！</string>
    <string name="notification_heavy2">我今天在云端潑下了一盆水，希望不要砸到可愛的楠楠！</string>
    <string name="notification_heavy3">大大大大雨啊！</string>
    <string name="notification_light1">有小雨！雖然濕濕碎，不要濕濕頭啦！</string>
    <string name="notification_light2">報告楠楠，有毛毛雨:)</string>
    <string name="notification_light3">好雨知時節，當春乃發生。隨風潛入夜，潤物細無聲。</string>
    <!--dictionary-->
    <string name="editText_hint">楠楠點我查單詞</string>
    <string name="word_search">幫你找</string>
    <string name="word_not_found">找不到楠楠的單詞嗚嗚嗚</string>

</resources>
