<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.baiyuweather.MainActivity">


    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="44dp"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rainbow_icon"
        app:layout_constraintRight_toLeftOf="@+id/home_icon" />

    <TextView
        android:id="@+id/weather_icon_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/see_weather"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/weather_icon"
        app:layout_constraintRight_toRightOf="@+id/weather_icon"
        app:layout_constraintTop_toBottomOf="@+id/weather_icon" />

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="58dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/home_icon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="44dp"
        android:layout_marginRight="65dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/go_home"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/home_icon"
        app:layout_constraintRight_toRightOf="@+id/home_icon"
        app:layout_constraintTop_toBottomOf="@+id/home_icon" />

    <ImageView
        android:id="@+id/dictionary_icon"
        android:layout_width="58dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/dictionary_icon"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/weather_icon_text"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/weather_icon" />

    <TextView
        android:id="@+id/dictionary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-2dp"
        android:text="@string/search_dictionary"
        app:layout_constraintLeft_toLeftOf="@+id/dictionary_icon"
        app:layout_constraintTop_toBottomOf="@+id/dictionary_icon"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/dictionary_icon"
        app:layout_constraintHorizontal_bias="1.0" />

</android.support.constraint.ConstraintLayout>
</layout>