<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.baiyuweather.WeatherActivityDetail">

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/detail_img_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/fog"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_date"
            android:layout_marginLeft="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/detail_low_temp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.076" />

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="35dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_high_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="50sp"
            tools:text="55°"
            android:layout_marginRight="31dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_date" />

        <TextView
            android:id="@+id/detail_low_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20°"
            android:textSize="40sp"
            app:layout_constraintRight_toLeftOf="@+id/detail_high_temp"
            android:layout_marginRight="7dp"
            app:layout_constraintTop_toTopOf="@+id/detail_high_temp"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="27dp"
            android:text="summary"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/detail_img_icon"
            app:layout_constraintTop_toBottomOf="@+id/detail_img_icon" />

        <TextView
            android:id="@+id/apparentTemp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apparent_temp"
            android:textSize="18sp"
            android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/summary"
            app:layout_constraintLeft_toLeftOf="@+id/summary"
            android:layout_marginLeft="0dp" />

        <TextView
            android:id="@+id/apparentTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            android:layout_marginRight="60dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/apparentTemp_text"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/humidity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/apparentTemp_text"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/apparentTemp_text" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/apparentTemp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/apparentTemp" />

        <TextView
            android:id="@+id/windspeed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windspeed"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/humidity_text"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/humidity_text" />

        <TextView
            android:id="@+id/windspeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            android:layout_marginLeft="-7dp"
            app:layout_constraintLeft_toLeftOf="@+id/humidity"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/humidity" />

        <TextView
            android:id="@+id/windbearing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windbearing"
            android:textSize="18sp"
            android:layout_marginTop="31dp"
            app:layout_constraintTop_toBottomOf="@+id/windspeed_text"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/windspeed_text" />

        <TextView
            android:id="@+id/windbearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp"
            android:layout_marginLeft="-7dp"
            app:layout_constraintLeft_toLeftOf="@+id/windspeed"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/windspeed" />
    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>


</layout>
